# adaptive-pergola

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
config/: configuration.yaml  home-assistant.log.1
custom_components/: __init__.py
docs/: CONFIG_FLOW_REWORK.md
scripts/: check_config  develop  render_wall_shadow_timeline.py  simulate_target_angles.py  stop
simulation_exports/: adaptive_pergola_2026-04-29_24h_hourly.csv  adaptive_pergola_2026-04-29_24h_hourly_open75_max135.csv
tests/: __init__.py  compat_policies.py  conftest.py  cover_helpers.py  ha_helpers.py  test_active_temperature_unit.py  test_adaptive_general_cover.py  test_adaptive_tilt_cover.py  test_adaptive_vertical_cover.py  test_auto_control_gate_matrix.py  test_binary_sensor_coverage.py  test_blind_spot_config_flow.py  test_boot_perf.py  test_building_overview.py  test_building_profile_config_flow.py  test_building_profile_link.py  test_building_profile_propagation.py  test_climate_cover_data.py  test_climate_cover_state.py  test_climate_modes.py  test_cloud_suppression.py  test_config_entry_migration.py  test_config_flow.py  test_config_flow_fov_compute.py  test_config_flow_integration.py  test_config_flow_proxy_cover.py  test_config_flow_schema_placement.py  test_config_flow_summary.py  test_config_flow_summary_i18n.py  test_config_flow_units.py  test_config_types_blind_spots.py  test_config_ux_simplification.py  test_const_blind_spot_slots.py  test_const_proxy_cover.py  test_control_state_reason.py  (+132 more)
(+152 files in other folders)
