[project]
name = "adaptive-pergola"
version = "0.6.0-beta5"
description = "Adaptive louvered-roof (pergola) automation for Home Assistant — pergola-only split of Adaptive Cover Pro"
requires-python = ">=3.13"
dependencies = [
  "homeassistant>=2026.4.0",
  "astral",
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-homeassistant-custom-component",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (slower, may require Home Assistant)",
    "perf: Wall-clock performance-budget tests (flaky on loaded hosts; skip with -m 'not perf')",
]
